[gd_scene load_steps=8 format=3 uid="uid://cncvlv8gw0rsk"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="FontFile" uid="uid://mswl18w0rdaj" path="res://Assets/Fonts/Cantarell-Regular.otf" id="2"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="2"]
content_margin_left = 10.0
content_margin_top = 15.0
content_margin_right = 10.0
content_margin_bottom = 15.0
bg_color = Color(0.933333, 0.933333, 0.933333, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="3"]
content_margin_left = 15.0
content_margin_top = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0
bg_color = Color(0.980392, 0.980392, 0.980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.4, 1)
border_blend = true
shadow_size = 2

[sub_resource type="StyleBoxEmpty" id="5"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(720, 1280)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 237.0
offset_top = 386.0
offset_right = 413.0
offset_bottom = 481.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("1")
text = "Purchase"

[node name="ResPop" type="Popup" parent="Control"]

[node name="ResPanel" type="PanelContainer" parent="Control/ResPop"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("2")

[node name="ResVB" type="VBoxContainer" parent="Control/ResPop/ResPanel"]
layout_mode = 2

[node name="ResLbl" type="Label" parent="Control/ResPop/ResPanel/ResVB"]
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("4")

[node name="ResBtn" type="Button" parent="Control/ResPop/ResPanel/ResVB"]
custom_minimum_size = Vector2(128, 36)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.533333, 0.533333, 0.533333, 1)
theme_override_fonts/font = SubResource("4")
theme_override_styles/normal = SubResource("3")
theme_override_styles/hover = SubResource("3")
theme_override_styles/pressed = SubResource("3")
theme_override_styles/disabled = SubResource("5")
theme_override_styles/focus = SubResource("3")
text = "Ok"

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/ResPop/ResPanel/ResVB/ResBtn" to="Control/ResPop" method="hide"]
